--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,48 +3,37 @@
 @tailwind utilities;
 
 @layer base {
-  /* dm-sans-regular - latin */
+  /* inter-regular - latin */
   @font-face {
-    font-family: "DM Sans";
+    font-family: "Inter";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: local(""),
-      url("~/assets/fonts/dm-sans-v10-latin-regular.woff2") format("woff2"),
+      url("~/assets/fonts/inter-v8-latin-regular.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("~/assets/fonts/dm-sans-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("~/assets/fonts/inter-v8-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  /* dm-sans-italic - latin */
+  /* inter-500 - latin */
   @font-face {
-    font-family: "DM Sans";
-    font-style: italic;
-    font-weight: 400;
-    font-display: swap;
-    src: local(""),
-      url("~/assets/fonts/dm-sans-v10-latin-italic.woff2") format("woff2"),
-      /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("~/assets/fonts/dm-sans-v10-latin-italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* dm-sans-500 - latin */
-  @font-face {
-    font-family: "DM Sans";
+    font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-display: swap;
     src: local(""),
-      url("~/assets/fonts/dm-sans-v10-latin-500.woff2") format("woff2"),
+      url("~/assets/fonts/inter-v8-latin-500.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("~/assets/fonts/dm-sans-v10-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("~/assets/fonts/inter-v8-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  /* dm-sans-700 - latin */
+  /* inter-700 - latin */
   @font-face {
-    font-family: "DM Sans";
+    font-family: "Inter";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
     src: local(""),
-      url("~/assets/fonts/dm-sans-v10-latin-700.woff2") format("woff2"),
+      url("~/assets/fonts/inter-v8-latin-700.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("~/assets/fonts/dm-sans-v10-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("~/assets/fonts/inter-v8-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 }
