--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -8,7 +8,7 @@
     font-style: normal;
     font-weight: 100 900;
     font-display: swap;
-    src: url("~/assets/fonts/Inter-roman.var.woff2?v=3.19") format("woff2");
+    src: url("~/assets/fonts/Inter-roman.var.woff2") format("woff2");
     font-named-instance: "Regular";
   }
 
@@ -17,7 +17,7 @@
     font-style: italic;
     font-weight: 100 900;
     font-display: swap;
-    src: url("~/assets/fonts/Inter-italic.var.woff2?v=3.19") format("woff2");
+    src: url("~/assets/fonts/Inter-italic.var.woff2") format("woff2");
     font-named-instance: "Italic";
   }
 }
